--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ sunt in culpa qui officia deserunt</p>
 			<div class="icon">
 			<i class="fa fa-picture-o" aria-hidden="true"></i>
 			</div>
-			<h2>Labore consequatur</h2>
+			<h2>Labore<br>consequatur</h2>
 <p>Aut suscipit aut cum nemo deleniti aut omnis.
 Doloribus ut maiores omnis facere</p>
 			 </div>
