--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
   
 </head>
 <body>
-  
 	 <!----header section start ---->
 	 <header class="header-top">
 	 <!...header info...>
 	  <div class="header-info">
 	   <div class="container">
 	   <div class="row align-items-center">
-	     <div class="col-lg-8">
+	     <div class="col-lg-8 col-md-8">
 		 <div class="contact-info">
 		 <span>
 		 <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>  contact@example.com</a>
@@ -30,7 +29,7 @@
 		 </span>
 	         </div>
 	       </div>
-	      <div class="col-lg-4 plat text-right">
+	      <div class="col-lg-4 col-md-4 plat text-right">
 		   
 		    <a  href="#" class="button">Get  started</a>
 		 
@@ -47,7 +46,7 @@
              <a href="#">Flexor</a>			 
 			</h1>
 			</div>
-			<div class="col-lg-8 plat">
+			<div class="col-lg-8 plat plat1 plat2">
 			<nav class="navbar">
 			<ul class="menubar">
 			<li class="nav-link"><a href="#" class="active"> Home</a></li>
@@ -62,6 +61,7 @@
 			</ul>
 			</nav>
 		</div>
+		<button class="menu-button d-lg-none"><i class="fa fa-bars" aria-hidden="true"></i></button>
 		</div>
 		</div>
 		</div>	
@@ -191,32 +191,32 @@ Sunt aut deserunt minus aut eligendi omnis.</p>
    <section class="customer">
      <div class="container">
 	   <div class="row">
-	      <div class="col-lg-2 col-sm-4">
+	      <div class="col-lg-2 col-sm-4 col-md-3">
 		  <div class="client-sec">
 		  <img src="images/client-1.png" alt="photo">
 		  </div>
 		  </div>
-          <div class="col-lg-2 col-sm-4">
+          <div class="col-lg-2 col-sm-4 col-md-3">
 		  <div class="client-sec">
 		  <img src="images/client-2.png" alt="photo">
 		  </div>
 		  </div>
-		    <div class="col-lg-2 col-sm-4">
+		    <div class="col-lg-2 col-sm-4 col-md-3">
 		  <div class="client-sec">
 		  <img src="images/client-3.png" alt="photo">
 		  </div>
 		  </div>
-		    <div class="col-lg-2 col-sm-4">
+		    <div class="col-lg-2 col-sm-4 col-md-3">
 		  <div class="client-sec">
 		  <img src="images/client-4.png" alt="photo">
 		  </div>
 		  </div>
-		    <div class="col-lg-2 col-sm-4">
+		    <div class="col-lg-2 col-sm-4 d-md-none">
 		  <div class="client-sec">
 		  <img src="images/client-5.png" alt="photo">
 		  </div>
 		  </div>
-		    <div class="col-lg-2 col-sm-4">
+		    <div class="col-lg-2 col-sm-4 d-md-none">
 		  <div class="client-sec">
 		  <img src="images/client-6.png" alt="photo">
 		  </div>
@@ -243,7 +243,7 @@ Sunt aut deserunt minus aut eligendi omnis.</p>
 	   Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 	   </div>
 	 <div class="row">
-	  <div class="col-lg-4">
+	  <div class="col-lg-4 col-md-6">
 	   <div class="service-items">
 	   <div class="service-icons">
 	   <i class="fa fa-suitcase" aria-hidden="true"></i>
@@ -254,7 +254,7 @@ Sunt aut deserunt minus aut eligendi omnis.</p>
 	  </div>
 	  </div>
 	 
-	  <div class="col-lg-4">
+	  <div class="col-lg-4 col-md-6">
 	   <div class="service-items">
 	   <div class="service-icons">
 	   <i class="fa fa-address-card-o" aria-hidden="true"></i>
@@ -265,7 +265,7 @@ Sunt aut deserunt minus aut eligendi omnis.</p>
 	  </div>
 	  </div>
 	  
-	  <div class="col-lg-4">
+	  <div class="col-lg-4 col-md-6">
 	   <div class="service-items">
 	   <div class="service-icons">
 	   <i class="fa fa-signal" aria-hidden="true"></i>
@@ -276,7 +276,7 @@ Sunt aut deserunt minus aut eligendi omnis.</p>
 	  </div>
 	  </div>
 	
-	  <div class="col-lg-4">
+	  <div class="col-lg-4 col-md-6">
 	   <div class="service-items">
 	   <div class="service-icons">
 	  <i class="fa fa-binoculars" aria-hidden="true"></i>
@@ -287,7 +287,7 @@ Sunt aut deserunt minus aut eligendi omnis.</p>
 	  </div>
 	  </div>
 	  
-	  <div class="col-lg-4">
+	  <div class="col-lg-4 col-md-6">
 	   <div class="service-items">
 	   <div class="service-icons">
 	  <i class="fa fa-sun-o" aria-hidden="true"></i>
@@ -298,7 +298,7 @@ Sunt aut deserunt minus aut eligendi omnis.</p>
 	  </div>
 	  </div>
 
-	  <div class="col-lg-4">
+	  <div class="col-lg-4 col-md-6">
 	   <div class="service-items">
 	   <div class="service-icons">
 	   <i class="fa fa-window-maximize" aria-hidden="true"></i>
@@ -317,7 +317,7 @@ Sunt aut deserunt minus aut eligendi omnis.</p>
    <section class="big">
    <div class="container">
    <div class="row">
-     <div class="col-lg-6">
+     <div class="col-lg-6 col-md-6">
 	<div class="box pic-1">
 	<div class="small">
 	<h2> Our Mission </h2>
@@ -328,7 +328,7 @@ Sunt aut deserunt minus aut eligendi omnis.</p>
 	</div>
 	</div>
 	</div>
-	  <div class="col-lg-6">
+	  <div class="col-lg-6 col-md-6">
 	<div class="box pic-2">
 	<div class="small">
 	<h2> Our Plan </h2>
@@ -341,7 +341,7 @@ Sunt aut deserunt minus aut eligendi omnis.</p>
 	</div>
 	</div>
 	</div>
-	 <div class="col-lg-6">
+	 <div class="col-lg-6 col-md-6">
 	<div class="box pic-3">
 	<div class="small">
 	<h2> Our Vision</h2>
@@ -352,7 +352,7 @@ Sunt aut deserunt minus aut eligendi omnis.</p>
 	  </div>
 	 </div>
 	</div>
-	 <div class="col-lg-6">
+	 <div class="col-lg-6 col-md-6">
 	<div class="box pic-4">
 	<div class="small">
 	<h2> Our Care </h2>
@@ -402,10 +402,10 @@ Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 	  </span>
 	  </div>
 	    <div class="row">
-	  <div class="col-lg-4">
+	  <div class="col-lg-4 col-md-6">
 	  <div class="portfolio-content">
 	   <div class="portfolio-img">
-	     <img src="images/portfolio-1.jpg" width="100%">
+	     <img src="images/portfolio-1.jpg">
 	   <div class="portfolio-abi">
 	       <h3>APP 1</h3>
 	   <p>APP</p>
@@ -418,10 +418,10 @@ Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 		
 	   </div>
 	   </div>
-	   <div class="col-lg-4">
+	   <div class="col-md-6 col-lg-4 ">
 	  <div class="portfolio-content">
 	    <div class="portfolio-img">
-	     <img src="images/portfolio-2.jpg" width="100%">
+	     <img src="images/portfolio-2.jpg">
 	   <div class="portfolio-abi">
 	       <h3>Wep 3</h3>
 	   <p>wep</p>
@@ -433,10 +433,10 @@ Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 		</div>
 	  </div>
 	  </div>
-	   <div class="col-lg-4">
+	   <div class="col-md-6 col-lg-4">
 	  <div class="portfolio-content">
 	    <div class="portfolio-img">
-	     <img src="images/portfolio-3.jpg" width="100%">
+	     <img src="images/portfolio-3.jpg">
 	   <div class="portfolio-abi">
 	       <h3>APP 2</h3>
 	   <p>APP</p>
@@ -448,10 +448,10 @@ Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 		</div>
 	  </div>
 	  </div>
-	   <div class="col-lg-4">
+	   <div class="col-md-6 col-lg-4">
 	  <div class="portfolio-content">
 	    <div class="portfolio-img">
-	     <img src="images/portfolio-4.jpg" width="100%">
+	     <img src="images/portfolio-4.jpg">
 	   <div class="portfolio-abi">
 	       <h3>Card 2</h3>
 	   <p>card</p>
@@ -463,10 +463,10 @@ Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 		</div>
 	  </div>
 	  </div>
-	   <div class="col-lg-4">
+	   <div class="col-lg-4 col-md-6">
 	  <div class="portfolio-content">
 	    <div class="portfolio-img">
-	     <img src="images/portfolio-5.jpg" width="100%">
+	     <img src="images/portfolio-5.jpg">
 	   <div class="portfolio-abi">
 	       <h3>Wep 2</h3>
 	   <p>wep</p>
@@ -478,10 +478,10 @@ Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 		</div>
 	  </div>
 	  </div>
-	   <div class="col-lg-4">
+	   <div class="col-lg-4 col-md-6">
 	  <div class="portfolio-content">
 	    <div class="portfolio-img">
-	     <img src="images/portfolio-6.jpg" width="100%">
+	     <img src="images/portfolio-6.jpg">
 	   <div class="portfolio-abi">
 	       <h3>APP 3</h3>
 	   <p>APP</p>
@@ -493,10 +493,10 @@ Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 		</div>
 	  </div>
 	  </div>
-	   <div class="col-lg-4">
+	   <div class="col-lg-4 col-md-6">
 	  <div class="portfolio-content">
 	    <div class="portfolio-img">
-	     <img src="images/portfolio-7.jpg" width="100%">
+	     <img src="images/portfolio-7.jpg">
 	   <div class="portfolio-abi">
 	       <h3>Cart 1</h3>
 	   <p>card</p>
@@ -508,10 +508,10 @@ Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 		</div>
 	  </div>
 	  </div>
-	   <div class="col-lg-4">
+	   <div class="col-lg-4 col-md-6">
 	  <div class="portfolio-content">
 	    <div class="portfolio-img">
-	     <img src="images/portfolio-8.jpg" width="100%">
+	     <img src="images/portfolio-8.jpg">
 	   <div class="portfolio-abi">
 	       <h3>Card 3</h3>
 	   <p>card</p>
@@ -523,14 +523,13 @@ Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 		</div>
 	  </div>
 	  </div>
-	   <div class="col-lg-4">
+	   <div class="col-lg-4 col-md-6">
 	  <div class="portfolio-content">
 	    <div class="portfolio-img">
-	     <img src="images/portfolio-9.jpg" width="100%">
+	     <img src="images/portfolio-9.jpg">
 	   <div class="portfolio-abi">
 	       <h3>Wep 3</h3>
 	   <p>wep</p>
-	   
 	     <a href="#" class="portfolio">
 	   <i class="fa fa-plus" aria-hidden="true"></i>
 	   <i class="fa fa-link" aria-hidden="true"></i></a>
@@ -552,7 +551,7 @@ Sit sint consectetur velit.Et nemo qui impedit
 suscipit alias ea.Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 	  </div>
 	  <div class="row">
-	  <div class="col-lg-3">
+	  <div class="col-lg-3 col-md-6">
 	  <div class="maker">
 	 <img src="images/team-1.jpg" width="100%">
 	 <div class="maker1">
@@ -565,7 +564,7 @@ suscipit alias ea.Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 <p>Chief Executive Officer</p>
 	  </div>
 	  </div>
-	  <div class="col-lg-3">
+	  <div class="col-lg-3 col-md-6">
 	  <div class="maker">
 	   <img src="images/team-2.jpg" width="100%">
 	    <div class="maker1">
@@ -578,7 +577,7 @@ suscipit alias ea.Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 <p>Product Manager</p>
 	  </div>
 	  </div>
-	  <div class="col-lg-3">
+	  <div class="col-lg-3 col-md-6">
 	  <div class="maker">
 	   <img src="images/team-3.jpg" width="100%">
 	    <div class="maker1">
@@ -591,7 +590,7 @@ suscipit alias ea.Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       <p>CTO</p>
 	  </div>
 	  </div>
-	  <div class="col-lg-3">
+	  <div class="col-lg-3 col-md-6">
 	  <div class="maker">
 	   <img src="images/team-4.jpg" width="100%">
 	    <div class="maker1">
@@ -618,7 +617,7 @@ Sit sint consectetur velit.Quisquam quos quisquam cupiditate.Et nemo qui impedit
 Quia fugiat sit in iste officiis commodi quidem hic quas.</p>	  
 	  </div>
 	  <div class="row">
-	  <div class="col-lg-3 ">
+	  <div class="col-lg-3 col-md-6">
 	  <div class="month">
 	  <h3>Free</h3>
 	  <h2><span><sup> $</sup>0</span> / month</h2>
@@ -632,7 +631,7 @@ Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 	  </div>
 	   </div>
 	  </div>
-	  <div class="col-lg-3">
+	  <div class="col-lg-3 col-md-6">
 	  <div class="month">
 	  <div class="business">
 	   <h3>Business</h3>
@@ -649,7 +648,7 @@ Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 	  </div>
 	  </div>
 	  </div>
-	  <div class="col-lg-3">
+	  <div class="col-lg-3 col-md-6">
 	  <div class="month">
 	  <h3>Developer</h3>
 	  <h2><span><sup> $</sup>29 </span> / month</h2>
@@ -663,7 +662,7 @@ Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 	  </div>
 	  </div>
 	  </div>
-	  <div class="col-lg-3">
+	  <div class="col-lg-3 col-md-6">
 	  <div class="month">
 	  <h3>Ultimate</h3>
 	  <div class="buy-order">
@@ -799,7 +798,7 @@ Tortor vitae purus faucibus ornare.Varius vel pharetra vel turpis nunc eget lore
 	<section class="footer">
 	    <div class="container">
 	<div class="row">
-		<div class="col-lg-3">
+		<div class="col-lg-3 col-md-6">
 		<div class="base">
   <h1>Flexor</h1>
   <br>
@@ -812,7 +811,7 @@ Tortor vitae purus faucibus ornare.Varius vel pharetra vel turpis nunc eget lore
 	<p><b>Email : </b> info@example.com</p>
 </div>
 	</div>
-	<div class="col-lg-2">
+	<div class="col-lg-2 col-md-6">
 		<div class="base1">
 		  <h2>Useful Links</h2>
 		  <br>
@@ -824,7 +823,7 @@ Tortor vitae purus faucibus ornare.Varius vel pharetra vel turpis nunc eget lore
 			<p><i class="fa fa-angle-right" aria-hidden="true"></i>Privacy policy</p></a>
 		</div>
 	</div>
-	<div class="col-lg-3">
+	<div class="col-lg-3 col-md-6">
 		<div class="base1">
 			<h2>Our Services</h2>
 			<br>
@@ -836,7 +835,7 @@ Tortor vitae purus faucibus ornare.Varius vel pharetra vel turpis nunc eget lore
 			<p><i class="fa fa-angle-right" aria-hidden="true"></i>Graphic Design</p></a>
 		</div>
 	</div>
-	<div class="col-lg-4">
+	<div class="col-lg-4 col-md-6">
 		<div class="base">
 			<h2>Join Our Newsletter</h2>
 			<br>
@@ -858,13 +857,13 @@ Tortor vitae purus faucibus ornare.Varius vel pharetra vel turpis nunc eget lore
 	 <section class="finish">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-6">
+			<div class="col-lg-6 col-md-2">
 				<div class="finish-1">
 <b>Designed by </b><a href="#" class="finish">K.Abinesh</a>
 				</div>
 			</div>
 			
-			<div class="col-lg-6">
+			<div class="col-lg-6 col-md-10">
 				<div class="finish-2">
 				<a href="#" class="loop">
 	 <i class="fa fa-twitter" aria-hidden="true"></i>
